--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "navneet kumar Yadav",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "3.3.2"
   }
 }
